# rag_system

./: .gitignore  README.md  compose.yaml  pyproject.toml
pipelines/: etl.py  eval.py  features.py  inference.py
questions/: golden.json
rag_system/: __init__.py  constants.py  settings.py  utils.py
rag_system/application/etl/: __init__.py  crawlers.py  document_load.py  file_hashing.py  reconcile.py  repository.py  text_extractors.py
rag_system/application/eval/: __init__.py  inference_run.py  predictions_load.py  question_run.py
rag_system/application/features/: __init__.py  load_documents.py  reconcile.py  reconcile_schema.py
rag_system/application/features/chunking/: __init__.py  chunking.py  hierarchical_v1.py
rag_system/application/features/text_cleaning/: __init__.py  remnote_v1.py  text_cleaning.py
rag_system/application/inference/: __init__.py  config.py  graph.py  schema_retriver.py  state.py
rag_system/application/inference/nodes/: __init__.py  answer.py  preprocess.py  retrieve.py  route_after_preprocess.py
rag_system/domain/: __init__.py  chunks.py  documents.py  eval_prediction.py  rag_config.py  rag_state.py  schema.py
rag_system/infrastructure/: __init__.py  cross_encoders.py  embedder.py  vector_store.py
rag_system/infrastructure/db/: __init__.py  mongo.py
steps/etl/: __init__.py  crawl_document_paths.py  extract_documents.py  reconcile_documents.py  sync_warehouse.py
steps/eval/: __init__.py  evaluation.py  load_questions.py  run_inference.py
steps/features/: __init__.py  chunk_documents.py  clean_documents.py  embed_load_chunks.py  get_changed.py  load_documents.py  prune_save_schema.py  truncate_save_schema.py
steps/inference/: __init__.py  inference.py
templates/: fact.txt  general.txt  preprocess.txt  schema.txt
tests/rag_system/application/etl/: test_crawlers.py
tests/rag_system/application/features/: test_chunking_hierarchical_v1.py  test_text_cleaning_remnote_v1.py
tools/: mongo_connect.py
