[project]
name = "rem-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bunnet>=1.3.0",
    "loguru>=0.7.3",
    "poethepoet>=0.47.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.17.0",
    "sentence-transformers>=5.6.0",
    "tqdm>=4.68.3",
    "zenml[server]>=0.95.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poe.tasks]
test = "pytest tests/"
mongo = "uv run -m tools.mongo_connect"
